# terraform-aws-github-workflow-dispatch-slack

./: .gitignore  .tool-versions  README.md  apigateway.tf  iam.tf  lambda.tf  lambda_layer.tf  locals.tf  outputs.tf  pre-commit.sh  pyproject.toml  renovate.json5  variables.tf
.github/actions/setup-terraform/: action.yml
.github/actions/setup-tools/: action.yml
.github/workflows/: .terraform.lock.hcl  main.tf  renovate.yml  test.yml  variables.tf
files/: requirements.txt
lambda/: pyproject.toml  requirements.txt
lambda/files/: requirements.txt
lambda/scripts/: create_lambda_layer.sh
lambda/src/: common.py  config.py  function.py
src/: common.py
