[tool.poetry]
name = "workflow-dispatcher"
version = "0.1.0+SNAPSHOT"
description = ""
authors = ["Tomohiko Ozawa <kota65535@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
requests = "2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pytest-dotenv = "0.5.2"
pytest-cov = "4.0.0"


[tool.poetry.group.plugin.dependencies]
poethepoet = "0.16.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest --cov --cov-branch --cov-report=xml"
